--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/mainLogo.png"
+  background_color: "#ffffff"
+  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
