--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_localizations:
     sdk: flutter
-  flutter_native_splash: ^2.4.0
   font_awesome_flutter: ^10.7.0
   intl: any
   modal_progress_hud_nsn: ^0.5.1
@@ -58,7 +57,7 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   background_color: "#ffffff"
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/mainLogo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
